# metora

./: .gitignore  README.md  pyproject.toml
adapters/: base.py
adapters/notification/: base.py
core/: commands.py  context.py  registry.py  results.py  runtime.py
engines/: audit.py  base.py  business.py  file.py  identity.py  notification.py  task.py  workflow.py
examples/common/: demo.py  module.py  usecases.py
examples/file/: local.py
examples/file/runtime/: file_metadata.json
examples/file/runtime/uploads/business/10001/: bc7111d9-86a5-4ee2-b3e0-1ba685395a0a.txt
persistence/: models.py
provider/notification/: base.py
providers/: base.py
providers/audit/: __init__.py  memory.py  protocol.py
providers/file/: local.py  protocol.py
providers/notification/: base.py
providers/storage/: local.py
test/: test_provider_file_local.py
tests/metora/unit/providers/audit/: test_memory.py
tests/metora/unit/providers/file/: test_local.py
tests/unit/providers/audit/: test_memory.py
usecases/: base.py
